port modbus DMA h745

--- a/SHiFTcode/USBCDCH745FUZZERModbusDMA/USBCDCH745FUZZERModbusDMA.ioc
+++ b/SHiFTcode/USBCDCH745FUZZERModbusDMA/USBCDCH745FUZZERModbusDMA.ioc
@@ -94,22 +94,22 @@ Mcu.Name=STM32H745ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN (OSC32_IN)
-Mcu.Pin10=PA7
-Mcu.Pin11=PC4
-Mcu.Pin12=PC5
-Mcu.Pin13=PB0
-Mcu.Pin14=PB13
-Mcu.Pin15=PB14
-Mcu.Pin16=PD8
-Mcu.Pin17=PD9
-Mcu.Pin18=PD10
-Mcu.Pin19=PG7
+Mcu.Pin10=PC4
+Mcu.Pin11=PC5
+Mcu.Pin12=PB0
+Mcu.Pin13=PB13
+Mcu.Pin14=PB14
+Mcu.Pin15=PD8
+Mcu.Pin16=PD9
+Mcu.Pin17=PD10
+Mcu.Pin18=PG7
+Mcu.Pin19=PA8
 Mcu.Pin2=PC15-OSC32_OUT (OSC32_OUT)
-Mcu.Pin20=PA8
-Mcu.Pin21=PA9
-Mcu.Pin22=PA11
-Mcu.Pin23=PA12
-Mcu.Pin24=PC11
+Mcu.Pin20=PA9
+Mcu.Pin21=PA11
+Mcu.Pin22=PA12
+Mcu.Pin23=PD0
+Mcu.Pin24=PD1
 Mcu.Pin25=PD5
 Mcu.Pin26=PD6
 Mcu.Pin27=PG11
@@ -123,10 +123,10 @@ Mcu.Pin33=VP_SYS_M4_VS_tim17
 Mcu.Pin34=VP_USB_DEVICE_M7_VS_USB_DEVICE_CDC_FS
 Mcu.Pin4=PH1-OSC_OUT (PH1)
 Mcu.Pin5=PC1
-Mcu.Pin6=PA0
-Mcu.Pin7=PA1
-Mcu.Pin8=PA2
-Mcu.Pin9=PA3
+Mcu.Pin6=PA1
+Mcu.Pin7=PA2
+Mcu.Pin8=PA3
+Mcu.Pin9=PA7
 Mcu.PinsNb=35
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
@@ -151,7 +151,9 @@ NVIC1.SysTick_IRQn=true\:15\:0\:false\:false\:false\:false\:true\:false
 NVIC1.TIM16_IRQn=true\:0\:0\:true\:false\:true\:false\:true\:true
 NVIC1.TimeBase=TIM16_IRQn
 NVIC1.TimeBaseIP=TIM16
-NVIC1.USART3_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true
+NVIC1.UART4_IRQn=true\:6\:0\:true\:false\:true\:true\:true\:true
+NVIC1.USART2_IRQn=true\:6\:0\:true\:false\:true\:true\:true\:true
+NVIC1.USART3_IRQn=true\:6\:0\:true\:false\:true\:true\:true\:true
 NVIC1.UsageFault_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
 NVIC2.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC2.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -167,10 +169,6 @@ NVIC2.TIM17_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:true
 NVIC2.TimeBase=TIM17_IRQn
 NVIC2.TimeBaseIP=TIM17
 NVIC2.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-PA0.GPIOParameters=PinAttribute
-PA0.Mode=Asynchronous
-PA0.PinAttribute=CortexM7
-PA0.Signal=UART4_TX
 PA1.GPIOParameters=PinAttribute
 PA1.Locked=true
 PA1.PinAttribute=CortexM4
@@ -228,10 +226,6 @@ PC1.GPIOParameters=PinAttribute
 PC1.Locked=true
 PC1.PinAttribute=CortexM4
 PC1.Signal=ETH_MDC
-PC11.GPIOParameters=PinAttribute
-PC11.Mode=Asynchronous
-PC11.PinAttribute=CortexM7
-PC11.Signal=UART4_RX
 PC13.GPIOParameters=GPIO_Label,PinAttribute
 PC13.GPIO_Label=B1 [Blue PushButton]
 PC13.Locked=true
@@ -255,6 +249,16 @@ PC5.GPIOParameters=PinAttribute
 PC5.Locked=true
 PC5.PinAttribute=CortexM4
 PC5.Signal=ETH_RXD1
+PD0.GPIOParameters=PinAttribute
+PD0.Locked=true
+PD0.Mode=Asynchronous
+PD0.PinAttribute=CortexM7
+PD0.Signal=UART4_RX
+PD1.GPIOParameters=PinAttribute
+PD1.Locked=true
+PD1.Mode=Asynchronous
+PD1.PinAttribute=CortexM7
+PD1.Signal=UART4_TX
 PD10.GPIOParameters=GPIO_Label,PinAttribute
 PD10.GPIO_Label=USB_OTG_FS_PWR_EN
 PD10.Locked=true
@@ -337,7 +341,7 @@ ProjectManager.StackSize=M4-0x400,M7-0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true-CortexM7,2-SystemClock_Config-RCC-false-HAL-false-CortexM7,3-MX_USART3_UART_Init-USART3-false-HAL-true-CortexM7,4-MX_RNG_Init-RNG-false-HAL-true-CortexM7,5-MX_USB_DEVICE_Init-USB_DEVICE_M7-true-HAL-false-CortexM7,6-MX_DMA_Init-DMA-false-HAL-true-CortexM7,7-MX_CRC_Init-CRC-false-HAL-true-CortexM7,8-MX_UART4_Init-UART4-false-HAL-true-CortexM7,1-MX_USART3_UART_Init-USART3-true-HAL-false-CortexM4,2-MX_DMA_Init-DMA-false-HAL-true-CortexM4,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true-CortexM7,0-MX_CORTEX_M4_Init-CORTEX_M4-false-HAL-true-CortexM4
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true-CortexM7,2-SystemClock_Config-RCC-false-HAL-false-CortexM7,3-MX_USART3_UART_Init-USART3-false-HAL-true-CortexM7,4-MX_RNG_Init-RNG-false-HAL-true-CortexM7,5-MX_USB_DEVICE_Init-USB_DEVICE_M7-true-HAL-false-CortexM7,6-MX_DMA_Init-DMA-false-HAL-true-CortexM7,7-MX_CRC_Init-CRC-false-HAL-true-CortexM7,8-MX_UART4_Init-UART4-false-HAL-true-CortexM7,9-MX_USART2_UART_Init-USART2-false-HAL-true-CortexM7,1-MX_USART3_UART_Init-USART3-true-HAL-false-CortexM4,2-MX_DMA_Init-DMA-false-HAL-true-CortexM4,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true-CortexM7,0-MX_CORTEX_M4_Init-CORTEX_M4-false-HAL-true-CortexM4
 RCC.ADCFreq_Value=16125000
 RCC.AHB12Freq_Value=240000000
 RCC.AHB4Freq_Value=240000000
