--- a/SHiFTcode/USBCDCH745FUZZERModbusDMA/USBCDCH745FUZZERModbusDMA.ioc
+++ b/SHiFTcode/USBCDCH745FUZZERModbusDMA/USBCDCH745FUZZERModbusDMA.ioc
@@ -1,6 +1,6 @@
 #MicroXplorer Configuration settings - do not modify
 CORTEX_M7.IPParameters=MPU_Control
-CORTEX_M7.MPU_Control=MPU_PRIVILEGED_DEFAULT
+CORTEX_M7.MPU_Control=__NULL
 CRC.IPParameters=InputDataInversionMode,OutputDataInversionMode,InputDataFormat
 CRC.InputDataFormat=CRC_INPUTDATA_FORMAT_WORDS
 CRC.InputDataInversionMode=CRC_INPUTDATA_INVERSION_WORD
@@ -134,9 +134,9 @@ Mcu.UserName=STM32H745ZITx
 MxCube.Version=6.6.0
 MxDb.Version=DB.6.0.60
 NVIC1.BusFault_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
-NVIC1.DMA1_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
-NVIC1.DMA1_Stream1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
-NVIC1.DMA1_Stream2_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC1.DMA1_Stream0_IRQn=true\:6\:0\:true\:false\:true\:false\:true\:true
+NVIC1.DMA1_Stream1_IRQn=true\:6\:0\:true\:false\:true\:false\:true\:true
+NVIC1.DMA1_Stream2_IRQn=true\:6\:0\:true\:false\:true\:false\:true\:true
 NVIC1.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC1.ForceEnableDMAVector=true
 NVIC1.HASH_RNG_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
@@ -433,7 +433,8 @@ UART4.BaudRate=1000000
 UART4.FIFOMode=FIFOMODE_ENABLE
 UART4.IPParameters=Mode,BaudRate,FIFOMode
 UART4.Mode=MODE_RX
-USART2.IPParameters=VirtualMode-Asynchronous
+USART2.BaudRate=1000000
+USART2.IPParameters=VirtualMode-Asynchronous,BaudRate
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 USART3.BaudRate=5000000
 USART3.FIFOMode=FIFOMODE_DISABLE
